2007-09-09	kaffeetisch

	Merge from HEAD:

	* t/GdkWindow.t: Fix a reported test failure in the
	get_decorations() checks.

2007-08-04	kaffeetisch

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.146.

2007-08-04	kaffeetisch

	Merge from HEAD:

	* t/GtkTooltips.t: Fix test failure due to change of semantics in
	gtk+.

2007-07-22	kaffeetisch

	Merge from HEAD:

	* t/GdkWindow.t
	* t/GtkIconTheme.t
	* t/GtkActionGroup.t
	* t/GtkRecentManager.t: Fix test failures.

	* xs/GtkCellRenderer.xs: Mortalize all SVs we put on the stack.
	In the past, we had to be careful not to cause destruction of
	pre-existing C objects, but that's not necessary anymore.

	* xs/GtkRadioAction.xs
	* xs/GtkRadioButton.xs
	* xs/GtkRadioMenuItem.xs: Plug leaks in the get_group() methods:
	Mark new SVs as mortal when we put them on the stack.

	* xs/PangoTypes.xs: Since pango uses GSlice starting with 1.12,
	use g_slice_new0 instead of g_new0 in Gtk2::Pango::Matrix::new
	when appropriate to avoid memory corruption.  (#458458, reported
	by Quentin Sculo)

2007-07-05	kaffeetisch

	Merge from HEAD:

	* xs/GdkPixbuf.xs: Really plug the leaks in
	Gtk2::Gdk::Pixbuf::render_pixmap_and_mask() and
	render_pixmap_and_mask_for_colormap().

2007-07-02	kaffeetisch

	* Gtk2.pm, NEWS, README: Stable release 1.145.

2007-07-02	kaffeetisch

	Merge from HEAD:

	* xs/GtkAboutDialog.xs: Hide the AboutDialog on any reponse.
	See http://svn.gnome.org/viewcvs/gtk%2B?revision=14919&view=revision
	which changed the behavior of the dialog in gtk+ between 2.8 and 2.10.

	* xs/GdkPixbuf.xs: Plug reference leaks on the pixmap and bitmap
	returned from Gtk2::Gdk::Pixbuf::render_pixmap_and_mask() and
	render_pixmap_and_mask_for_colormap().  Also add a couple of
	FIXMEs.

2007-06-25	kaffeetisch

	Merge from HEAD:

	* t/GtkIconView.t
	* xs/GtkIconView.xs: Supply default values for scroll_to_path.
	Suggested by Jeffrey Ratcliffe.

	* exampels/cellrenderer_popup.pl: Slightly modified patch from